SET(LIB_NAME HAPVOXLIB)
SET(PLUGIN_HEADERS
	hVec3.h
	hMesh.h
    Haptics.h
	HapVoxCVR.h
)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
	hVec3.cpp
	hMesh.cpp
    Haptics.cpp
	HapVoxCVR.cpp
)


INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})

ADD_CALVR_LIBRARIES(${LIB_NAME})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
